--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,27 +8,28 @@
   <body>
     <nav>
       <ul>
-	<li><a href="/">^</a></li>
-	<li><a href="/todos">*</a></li>
-	<li><a href="/apho">#</a></li>
-	<li><a href="/poe">/</a></li>
-	<li><a href="/list">$</a></li>
-	<li><a href="/cal">@</a></li>
-	<li><a href="/blog">()</a></li>
+        <li><a href="/">^</a></li>
+        <li><a href="/cal">@</a></li>
+        <li><a href="/todos">*</a></li>
+        <li><a href="/list">$</a></li>
+        <li><a href="/sh">;</a></li>
+        <li><a href="/apho">#</a></li>
+        <li><a href="/poe">/</a></li>
+        <li><a href="/blog">()</a></li>
       </ul>
     </nav>
     <div class="container">
-      
+
       {{ content }}
-      
+
     </div><!-- /.container -->
     <footer>
       <ul>
-	<li><a href="mailto:pilotedeguerre@gmail.com">email</a></li>
-	<li><a href="https://github.com/applecargo">github</a></li>
-	<li><a href="http://dianaband.info">dianaband</a></li>
-	<!-- <li><a href="https://www.facebook.com/apple.cargo">fb</a></li>
-	     <li><a href="https://twitter.com/applecargo">twit</a></li> -->
+        <li><a href="mailto:pilotedeguerre@gmail.com">email</a></li>
+        <li><a href="https://github.com/applecargo">github</a></li>
+        <li><a href="http://dianaband.info">dianaband</a></li>
+        <!-- <li><a href="https://www.facebook.com/apple.cargo">fb</a></li>
+             <li><a href="https://twitter.com/applecargo">twit</a></li> -->
       </ul>
     </footer>
   </body>
